--- a/Cap08_Segmentacion/RegionSegmentation.ipynb
+++ b/Cap08_Segmentacion/RegionSegmentation.ipynb
@@ -138,7 +138,14 @@
     "id": "CUPPJrgBXJsP"
    },
    "source": [
-    "# Otsu"
+    "# 1. Otsu"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Es un método de segmentación de regiones, en el ual se propone encontrar automáticamente un umbral (óptimo), para escoger dicho umbral se propone un histograma , Otsu funciona bien para imágenes con histogramas bimodales."
    ]
   },
   {
@@ -147,7 +154,7 @@
     "id": "tujbxhppms4T"
    },
    "source": [
-    "## Básico"
+    "## 1.1. Básico"
    ]
   },
   {
@@ -238,7 +245,7 @@
     "id": "naJyuqRwpXU7"
    },
    "source": [
-    "## Segmentación bimodal"
+    "## 1.2.Segmentación bimodal"
    ]
   },
   {
@@ -348,7 +355,7 @@
     "id": "aei8BGqOXbo2"
    },
    "source": [
-    "# Adaptive Thresholding"
+    "# 2.Adaptive Thresholding"
    ]
   },
   {
@@ -418,7 +425,30 @@
     "id": "qGzZ_GxEX93F"
    },
    "source": [
-    "# MSER"
+    "# 3.MSER"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**1. ¿Qué es y para que sirve?**\n",
+    "\n",
+    "MSER(Maximally Stable Extremal Regions) es un método de segmentación robusto cuando  se tienen distintas regiones en la imagen y cada región tiene su propio umbral.\n",
+    "\n",
+    "Este método se puede entender de la siguiente forma, se hace un video de 256 frames y el cuadro $t$ va ser la imagen binaria resultante de la segmentación de esta imagen con umbral $t$. \n",
+    "\n",
+    "**2.¿En qué consiste?**: \n",
+    "\n",
+    "Para un determinado rango de umbral $[t_{1},t_{2}]$ el área de la región se mantiene completamente constante, por lo cual para **regiones estables** hay una zona en los umbrales que si se mueve el umbral a la izquierda o a la derecha el área de esta region se mantiene constante.El área de una región es función de $ \\theta $. Calculamos \n",
+    "\n",
+    "<p style=\"text-align:center\"> $ \\frac{\\Delta A}{\\Delta \\theta}$</p>\n",
+    "\n",
+    "Si tenemos una región \"estable\" entonces su área no varía mucho al cambiar su umbral.  Lo que se propone en este método es buscar en que momento la variación del umbral no hace que cambie el área. \n",
+    "\n",
+    "<p style=\"text-align:center\"> $ \\frac{\\Delta A}{\\Delta \\theta} : es pequeño $</p>\n",
+    "\n",
+    "Se propone buscar regiones en la imagen con sus umbrales específicos, en los que el $ \\frac{\\Delta A}{\\Delta \\theta}$ : sea pequeño. Se tiene un umbral en esa área específica y lo segmenta."
    ]
   },
   {
@@ -647,7 +677,7 @@
   "toc": {
    "base_numbering": 1,
    "nav_menu": {},
-   "number_sections": true,
+   "number_sections": false,
    "sideBar": true,
    "skip_h1_title": true,
    "title_cell": "Table of Contents",
